add Product model, add *ngFor for product-list

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,5 +1,5 @@
-<div class="item">
-    <a class="item-name">Item name</a>
-    <a class="item-price">Price</a>
+<div class="item" *ngIf="product">
+    <a class="item-name">{{product.name}}</a>
+    <a class="item-price">{{product.price}}$</a>
     <button class="item-add">Add to cart</button>
 </div>
