--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,11 +1,8 @@
 <div class="box">
     <p class="title">{{title}}</p>
     <ul>
-        <li>
-            <app-product></app-product>
-        </li>
-        <li>
-            <app-product></app-product>
+        <li *ngFor = "let product of products">
+            <app-product [product]="product"></app-product>
         </li>
     </ul>
 </div>
